--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,95 +1,77 @@
-# Mod key
+################################################
+########## rikardoricz i3-gaps config ##########
+################################################
+
+########## VARIABLES ##########
 set $mod Mod4
-# alt key
 set $alt Mod1
 
+########## Settings ##########
+# Font
+font pango:JetBrainsMono Nerd Font Regular 8
 # Gaps
 gaps inner 10
-
 # Border size
 default_border pixel 3
 default_floating_border pixel 3
 
-# Font
-font pango:JetBrainsMono Nerd Font Regular 8
-
-# Keyboard layout
-#exec setxkbmap pl
-
+########## Autostart ##########
+exec_always --no-startup-id dunst # notifications
+exec_always --no-startup-id picom --experimental-backends # compositor
+exec_always --no-startup-id nitrogen --restore # wallpaper
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh # polybar
+exec --no-startup-id caprine # messenger
 # Start XDG autostart .desktop files using dex. See also
 exec --no-startup-id dex --autostart --environment i3
-
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+# Dualmonitor configuration via xrandr
+exec --no-startup-id xrandr --dpi 120/HDMI2 --output eDP1 --mode 1920x1080 --output HDMI2 --mode 1920x1080 --above eDP1 
 
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-# Use Mouse+$mod to drag floating windows to their wanted position
+########## Window management ##########
 floating_modifier $mod
-
-# start a terminal
-bindsym $mod+Return exec --no-startup-id alacritty
-
 # kill focused window
-bindsym $mod+Shift+q kill
-
+bindsym $mod+q kill
 # change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
-
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
-
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-
 # split in horizontal orientation
 bindsym $mod+h split h
-
 # split in vertical orientation
 bindsym $mod+v split v
-
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
+bindsym $mod+Shift+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
-
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
+bindsym $mod+Tab floating toggle
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
+bindsym Mod1+Tab focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
-
 # Define names for default workspaces for which we configure key bindings later on.
 set $ws1 "1"
 set $ws2 "2"
@@ -101,11 +83,9 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
-
-exec --no-startup-id xrandr --dpi 120/HDMI2 --output eDP1 --mode 1920x1080 --output HDMI2 --mode 1920x1080 --above eDP1 
 set $firstMonitor = HDMI2 
 set $secondMonitor = eDP1
-
+# assign workspaces to monitor
 workspace 1 output $firstMonitor
 workspace 2 output $firstMonitor
 workspace 3 output $firstMonitor
@@ -127,7 +107,6 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
-
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
@@ -139,14 +118,6 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # Pressing left will shrink the window’s width.
@@ -157,80 +128,18 @@ mode "resize" {
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
         bindsym semicolon resize grow width 10 px or 10 ppt
-
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
-
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
 }
-
 bindsym $mod+r mode "resize"
-
-
-
-########## FKEYS ##########
-set $fnkey = "XF86WakeUp"
-set $briUp "XF86MonBrightnessUp"
-set $briDown "XF86MonBrightnessDown"
-set $volUp "XF86AudioRaiseVolume"
-set $volDown "XF86AudioLowerVolume"
-set $volMute "XF86AudioMute"
-set $prtsc = "Print"
-
-########## KEYBINDINGS ##########
-# web browser
-bindsym $mod+Shift+f exec --no-startup-id firefox
-# rofi 
-bindsym $mod+d exec --no-startup-id ~/.config/rofi/bin/launcher_colorful
-bindsym $mod+p exec --no-startup-id ~/.config/rofi/powermenu/powermenu.sh &
-
-# lockscreen
-bindsym $mod+$alt+l exec i3lock-fancy-dualmonitor
-# brightness
-bindsym $briUp exec xbacklight -inc 10
-bindsym $briDown exec xbacklight -dec 10
-
-# audio
-bindsym $volUp exec amixer sset Master 5%+
-bindsym $volDown exec amixer sset Master 5%-
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioPause exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-# bindsym $volMute exec amixer sset 'Master' toggle
-
-# Screenshots
-bindsym Print exec --no-startup-id maim  "/home/$USER/Pictures/$(date +%s).png"
-bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date +%s).png"
-bindsym Shift+Print exec --no-startup-id maim -o --select "/home/$USER/Pictures/$(date +%s).png"
-
-## Clipboard Screenshots
-bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
-bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
-bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
-
-########## COLORS ##########
-
-set $green "#98C379"
-set $red "be5046"
-set $black "#282C34"
-set $fontLight "abb2bf"
-set $fontDark "282c34"
-
-# CLASS                 BORDER      BACK       TEXT        INDICATOR
-client.focused          $green      $green     $black         $green
-client.focused_inactive $black      $black     $fontLight     $black
-client.unfocused        $black      $black     $fontLight     $black
-client.urgent           $red        $black     $fontLight     $black
-client.placeholder      $black      $black     $fontLight     $black
-
-########## MOVE APPS TO SPECIFIC WORKSPACE ##########
+# Move apps to specific workspaces
 for_window [class="Firefox"] move container to workspace $ws1
 for_window [class="Spotify"] move container to workspace $ws4
 for_window [class="discord"] move container to workspace $ws5
@@ -239,10 +148,67 @@ for_window [class="Caprine"] move container to workspace $ws5
 for_window [class="TelegramDesktop"] move container to workspace $ws5
 for_window [class="Yad" title="yad-calendar"] floating enable # calendar
 
-########## AUTOSTART ##########
+########## Hardware ##########
+# fkeys and related variables
+set $fnkey = "XF86WakeUp"
+set $briUp "XF86MonBrightnessUp"
+set $briDown "XF86MonBrightnessDown"
+set $volUp "XF86AudioRaiseVolume"
+set $volDown "XF86AudioLowerVolume"
+set $volMute "XF86AudioMute"
+set $prtsc = "Print"
+# Audio
+set $refresh_i3status killall -SIGUSR1 i3status
+#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym $volUp exec amixer sset Master 5%+
+bindsym $volDown exec amixer sset Master 5%-
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPause exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+# bindsym $volMute exec amixer sset 'Master' toggle
+# Brightness
+bindsym $briUp exec xbacklight -inc 10
+bindsym $briDown exec xbacklight -dec 10
 
-exec --no-startup-id dunst # notifications
-exec --no-startup-id picom --experimental-backends # compositor
-exec --no-startup-id nitrogen --restore # wallpaper
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh # polybar
-exec --no-startup-id caprine # messenger
+########## Apps ##########
+bindsym $mod+Return exec --no-startup-id alacritty # terminal
+bindsym $mod+w exec firefox # web browser
+bindsym $mod+f exec thunar # file manager
+bindsym $mod+d exec --no-startup-id ~/.config/rofi/bin/launcher_colorful & # rofi apps
+bindsym $mod+p exec --no-startup-id ~/.config/rofi/powermenu/powermenu.sh & # rofi powermenu
+
+
+########## Colors ##########
+set $green "#98C379"
+set $red "be5046"
+set $black "#282C34"
+set $fontLight "abb2bf"
+set $fontDark "282c34"
+# CLASS                 BORDER      BACK       TEXT        INDICATOR
+client.focused          $green      $green     $black         $green
+client.focused_inactive $black      $black     $fontLight     $black
+client.unfocused        $black      $black     $fontLight     $black
+client.urgent           $red        $black     $fontLight     $black
+client.placeholder      $black      $black     $fontLight     $black
+
+########## Others ##########
+# lockscreen
+bindsym $mod+$alt+l exec i3lock-fancy-dualmonitor
+# reload the configuration file
+bindsym $mod+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# Screenshots
+bindsym Print exec --no-startup-id maim  "/home/$USER/Pictures/$(date +%s).png"
+bindsym $mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date +%s).png"
+bindsym Shift+Print exec --no-startup-id maim -o --select "/home/$USER/Pictures/$(date +%s).png"
+# Clipboard Screenshots
+bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+bindsym Ctrl+$mod+Print exec --no-startup-id maim --window $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
