Changing default GTK font
Changing GTK font from JetBrainsMono Nerd Font to default (Noto Sans Regular)

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,4 +1,4 @@
 [Settings]
 gtk-icon-theme-name = Papirus
 gtk-theme-name = WhiteSur-Dark
-gtk-font-name = JetBrainsMono Nerd Font 10
+;gtk-font-name = Noto Sans Regular 10
