Minor changes to nvim config and polybar (w/ calendar module)

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -161,12 +161,17 @@ blacklist-0 = num lock
 blacklist-1 = scroll lock
 
 format = <label-layout> <label-indicator>
-format-prefix = 
+format-prefix = " "
 format-prefix-foreground = ${colors.dark-yellow}
 format-spacing = 0
-label-laout = %icon%
-label-layout-padding = 1
+label-laout = '%name% q'
+label-layout-padding = 
 label-layout-foreground = ${colors.foreground}
+label-indicator-on = +%name%
+label-indicator-off = -%name%
+label-indicator-on-capslock =
+label-indicator-on-capslock-foreground = ${colors.dark-yellow}
+label-indicator-off-capslock = 
 
 
 [module/bluetooth]
